tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/cant-hide-behind-direct-struct-param.stderr
error: constant of non-structural type `WrapParam<NoDerive>` in a pattern
  --> $DIR/cant-hide-behind-direct-struct-param.rs:21:9
   |
LL | struct WrapParam<T>(T);
   | ------------------- `WrapParam<NoDerive>` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
LL |
LL | const WRAP_DIRECT_PARAM: WrapParam<NoDerive> = WrapParam(NoDerive(0));
   | -------------------------------------------- constant defined here
...
LL |         WRAP_DIRECT_PARAM => { panic!("WRAP_DIRECT_PARAM matched itself"); }
   |         ^^^^^^^^^^^^^^^^^ constant of non-structural type
   |
help: if `WrapParam<NoDerive>` manually implemented `PartialEq`, you could add a condition to the match arm checking for equality
   |
LL -         WRAP_DIRECT_PARAM => { panic!("WRAP_DIRECT_PARAM matched itself"); }
LL +         binding if binding == WRAP_DIRECT_PARAM => { panic!("WRAP_DIRECT_PARAM matched itself"); }
   |

error: aborting due to 1 previous error

